Slick buttons disabled at first and last slide

--- a/index.html
+++ b/index.html
@@ -386,6 +386,11 @@
             <section class="section-recommended container-section">
                 <h2 class="title tundora mb-4">Recommended for you</h2>
                 <div class="container-card-recommended">
+                    <a class="slick-prev slick-prev-card" href="#">
+                        <div class="shadow">
+                            <svg viewBox="0 0 16 16" role="presentation" aria-hidden="true" focusable="false" style="display: block; fill: black;"><path d="m10.8 16c-.4 0-.7-.1-.9-.4l-6.8-6.7c-.5-.5-.5-1.3 0-1.8l6.8-6.7c.5-.5 1.2-.5 1.7 0s .5 1.2 0 1.7l-5.8 5.9 5.8 5.9c.5.5.5 1.2 0 1.7-.2.3-.5.4-.8.4"></path></svg>
+                        </div>
+                    </a>
                     <div class="slick-container-card-recommended">
                         <div class="card card-recommended">
                             <div class="card-recommended-image-container">
@@ -458,6 +463,11 @@
                             <a href="#" class="stretched-link"></a>
                         </div>
                     </div>
+                    <a class="slick-next slick-next-card" href="#">
+                        <div class="shadow">
+                            <svg viewBox="0 0 16 16" role="presentation" aria-hidden="true" focusable="false" style="display: block; fill: black;"><path d="m5.3 16c .3 0 .6-.1.8-.4l6.8-6.7c.5-.5.5-1.3 0-1.8l-6.8-6.7c-.5-.5-1.2-.5-1.7 0s-.5 1.2 0 1.7l5.8 5.9-5.8 5.9c-.5.5-.5 1.2 0 1.7.2.3.5.4.9.4"></path></svg>
+                        </div>
+                    </a>
                 </div>
             </section>
             <!--End of Recommended-->
