Toggleable footer is implemented

--- a/homes.html
+++ b/homes.html
@@ -168,9 +168,9 @@
         <hr>
 
         <div class="terms">
-            <span class=">
+            <span class="shadow">
                 <img class="mr-2" src="./assets/img/homepage/svgs/info.svg" alt="info" width="20px">
-                Terms, Privacy & More
+                <span>Terms, Privacy & More</span>
             </span>
         </div>
    </header>
@@ -1353,7 +1353,7 @@
         </article>
    </main>
 
-    <footer class="container-footer">
+    <footer class="container-footer footer-toggle">
                 <div class="row justify-content-between">
                     <ul class="nav flex-column">
                         <li class="nav-item footer-title">
