--- a/rooms.html
+++ b/rooms.html
@@ -734,7 +734,7 @@
         </article>
     </main>
     
-    <footer class="container-footer">
+    <footer class="container-footer" style="margin-bottom: 80px;">
                 <div class="row justify-content-between">
                     <ul class="nav flex-column">
                         <li class="nav-item footer-title">
