Video pause/play is implemented

--- a/index.html
+++ b/index.html
@@ -268,8 +268,14 @@
                         </div>
                         <a href="#" class="btn btn-secondary button button-secondary mt-4">Learn more</a>
                     </div>
+                    <div class="button-play-container">
+                        <button class="button-play">
+                            <i class="fas fa-pause"></i>
+                        </button>
+                    </div>
                     <img src="./assets/img/homepage/video/koyun.jpg" alt="koyun">
                     <video class="card-image" src="./assets/img/homepage/video/video.mp4" autoplay loop></video>
+                    
                 </div>
             </section>
             <!--End of Animals-->
