Card dates' hidden part is implemented

--- a/homes.html
+++ b/homes.html
@@ -153,7 +153,9 @@
             </div>
         </nav>
 
-        <hr class="mt-n1">
+        
+        <div class="hidden-fiters">
+                <hr class="mt-n1">
             <ul class="container-fluid nav list-filter">
                 <li>
                     <a href="#" class="button-filter">Dates</a>
@@ -165,6 +167,8 @@
                     <a href="#" class="button-filter">More Filters</a>
                 </li>
             </ul>
+        </div>
+        
         <hr>
 
         <div class="terms">
