Homes page's pagination buttons are added

--- a/homes.html
+++ b/homes.html
@@ -1354,6 +1354,18 @@
                     </div>
                </div>
             </section>
+            <section class="container-section pagination d-flex justify-content-around d-md-none">
+                <div class="d-inline button-pagination-container mr-5">
+                    <a href="#" class="button-pagination big">
+                        <img src="./assets/img/homepage/svgs/left-arrow-green.svg" width="14px" alt="left-arrow-green">
+                    </a>
+                </div> 
+                <div class="d-inline button-pagination-container ml-3">
+                    <a href="#" class="button-pagination big">
+                        <img src="./assets/img/homepage/svgs/right-arrow-green.svg" width="14px" alt="right-arrow-green">
+                    </a>
+                </div> 
+            </section>
             <section class="section-fixed-navigation-bar">
                     <div class="card card-fixed-navigation-bar">
                         <div class="card-body card-body-fixed-navigation-bar">
