--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <section class="section-explore container-section">
                 <h2 class="my-4 title tundora">Explore Airbnb</h2>
                 <div class="card-deck container-card-explore">
-                    <div class="card shadow card-explore">
+                    <div class="card card-explore">
                         <div class="container-card-image">
                             <img src="./assets/img/homepage/explore/stays.jpg" class="card-img-top" alt="stays">
                         </div>
@@ -262,7 +262,7 @@
                         </div>
                         <a href="/homes.html" class="stretched-link"></a>
                     </div>
-                    <div class="card shadow card-explore">
+                    <div class="card card-explore">
                         <div class="container-card-image">
                             <img src="./assets/img/homepage/explore/experiences.jpg" class="card-img-top"
                                 alt="experiences">
@@ -272,7 +272,7 @@
                         </div>
                         <a href="#" class="stretched-link"></a>
                     </div>
-                    <div class="card shadow card-explore">
+                    <div class="card card-explore">
                         <div class="container-card-image">
                             <img src="./assets/img/homepage/explore/advantures.jpg" class="card-img-top"
                                 alt="advantures">
@@ -282,7 +282,7 @@
                         </div>
                         <a href="#" class="stretched-link"></a>
                     </div>
-                    <div class="card shadow card-explore">
+                    <div class="card card-explore">
                         <div class="container-card-image">
                             <img src="./assets/img/homepage/explore/restaurants.jpg" class="card-img-top"
                                 alt="restaurants">
