Comments' read more button is implemented

--- a/rooms.html
+++ b/rooms.html
@@ -235,14 +235,12 @@
                </li>
                <li class="nav-item">
                     <a class="nav-link" href="#section-reviews">Reviews ·</a>
-                    
                </li>
                <li class="nav-item">
                     <a class="nav-link" href="#section-host">The Host ·</a>
                </li>
                <li class="nav-item">
                     <a class="nav-link" href="#section-location">Location ·</a>
-                     
                </li>
                <li class="nav-item">
                     <a class="nav-link" href="#section-policies">Policies</a>
@@ -524,7 +522,9 @@
                                 <span class="comment-date">July 2019</span>
                             </div>
                         </div>
-                        <p>This place is very secluded, but the view is definitely worth it. if you come in the summer time, bring wasp repellent, or you may be sorry.</p>
+                        <div class="position-relative">
+                            <p class="comment-text" id="c1">This place is very secluded, but the view is definitely worth it. if you come in the summer time, bring wasp repellent, or you may be sorry.</p>
+                        </div>
                     </div>
                     <hr>
                     <div class="comment">
@@ -538,10 +538,11 @@
                                 <span class="comment-date">February 2018</span>
                             </div>
                         </div>
-                        <p>
-                            We had a wonderful stay at the end of February this year. Our host, Kristie, was very communicative before our trip and sent us loads of helpful information. Aside from the obvious magical allure you can see in the photos, Kristie added a number of fun, thoughtful touches that delighted us throughout our stay. There was still a good bit of snow surrounding the property and we were so thankful for the tip from Kristie about the much-needed four-wheel drive and for the gas fireplace inside that kept us toasty. The nearby towns are pretty sleepy around this time of year so if you’re interested in festivals and events, other times of year would be best, according to the locals we spoke to. It is also truly off the grid, so be prepared to unplug and unwind because you won’t be getting WiFi or much phone signal inside.
-                        </p>
-                        <a href="#" class="link-collapse">Read more</a>
+                        <div class="position-relative">
+                            <p class="comment-text" id="c2">
+                                We had a wonderful stay at the end of February this year. Our host, Kristie, was very communicative before our trip and sent us loads of helpful information. Aside from the obvious magical allure you can see in the photos, Kristie added a number of fun, thoughtful touches that delighted us throughout our stay. There was still a good bit of snow surrounding the property and we were so thankful for the tip from Kristie about the much-needed four-wheel drive and for the gas fireplace inside that kept us toasty. The nearby towns are pretty sleepy around this time of year so if you’re interested in festivals and events, other times of year would be best, according to the locals we spoke to. It is also truly off the grid, so be prepared to unplug and unwind because you won’t be getting WiFi or much phone signal inside.
+                            </p>  
+                        </div>
                     </div>
                     <hr>
                     <div class="comment">
@@ -555,10 +556,11 @@
                                 <span class="comment-date">May 2016</span>
                             </div>
                         </div>
-                        <p>
-                            The place was amazing! The directions were clear, I was just distracted by all the views and thought maybe I drove past it at first. Some nice neighbors helped me out. Parking area was easy to find and the little journey up the path to the front door was a nice procession. The coffee and snacks were delicious and a nice welcome. everything was so well appointed and comfortable. I slept really well and was eager to take advantage of the amenities like the fireplace.
-                        </p>
-                        <a href="#" class="link-collapse">Read more</a>
+                        <div class="position-relative">
+                            <p class="comment-text" id="c3">
+                                The place was amazing! The directions were clear, I was just distracted by all the views and thought maybe I drove past it at first. Some nice neighbors helped me out. Parking area was easy to find and the little journey up the path to the front door was a nice procession. The coffee and snacks were delicious and a nice welcome. everything was so well appointed and comfortable. I slept really well and was eager to take advantage of the amenities like the fireplace.
+                            </p>
+                        </div>
                     </div>
                     <hr>
                     <div class="comment">
@@ -572,10 +574,11 @@
                                 <span class="comment-date">November 2019</span>
                             </div>
                         </div>
-                        <p>
-                            Such a fun experience! Especially for a LOTR/ Hobbit fan! My sister came in from Alabama and was totally taken with the scenery and she felt like the house put her in the movie. Would definitely recommend this to anyone wanting a fun adventure for a night too. I had fun carving my owl. :)
-                        </p>
-                        <a href="#" class="link-collapse">Read more</a>
+                        <div class="position-relative">
+                            <p class="comment-text" id="c4">
+                                Such a fun experience! Especially for a LOTR/ Hobbit fan! My sister came in from Alabama and was totally taken with the scenery and she felt like the house put her in the movie. Would definitely recommend this to anyone wanting a fun adventure for a night too. I had fun carving my owl. :)
+                            </p>
+                        </div>
                     </div>
                     <hr>
                     <div class="comment">
@@ -589,10 +592,11 @@
                                 <span class="comment-date">November 2019</span>
                             </div>
                         </div>
-                        <p>
-                            If you are a huge fan or a casual enthusiast of Lord of the Rings this is a must visit. I felt the same wonder and joy in my heart as I did when I first experienced Middle-earth when I was 12 years old. An absolute delight from start to finish, if a little bit off the beaten track.
-                        </p>
-                        <a href="#" class="link-collapse">Read more</a>
+                        <div class="position-relative">
+                            <p class="comment-text" id="c5">
+                                If you are a huge fan or a casual enthusiast of Lord of the Rings this is a must visit. I felt the same wonder and joy in my heart as I did when I first experienced Middle-earth when I was 12 years old. An absolute delight from start to finish, if a little bit off the beaten track.
+                            </p> 
+                        </div>
                     </div>
                     <hr>
                     <div class="comment">
@@ -606,7 +610,9 @@
                                 <span class="comment-date">November 2019</span>
                             </div>
                         </div>
-                        <p>Beautiful view, thoughtful touches and peaceful atmosphere. We loved our stay!</p>
+                        <div class="position-relative">
+                            <p class="comment-text" id="c6">Beautiful view, thoughtful touches and peaceful atmosphere. We loved our stay!</p>
+                        </div>
                     </div>
                     <hr>
                     <div class="comment">
@@ -620,7 +626,9 @@
                                 <span class="comment-date">October 2019</span>
                             </div>
                         </div>
-                        <p>We had a great time. It's so beautiful up in the mountains. You will love it!</p>
+                        <div class="position-relative">
+                            <p class="comment-text" id="c7">We had a great time. It's so beautiful up in the mountains. You will love it!</p>
+                        </div>
                     </div>
                     <hr class="mb-5">
                     <div class="pagination">
@@ -1015,5 +1023,7 @@
     <script src="./assets/js/rooms.js"></script>
     <!--Slick-->
    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+   <!--dotdotdot-->
+   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jQuery.dotdotdot/4.0.10/dotdotdot.js"></script>
 </body>
 </html>
