Recommended cards' texts are centered in a simple way

--- a/rooms.html
+++ b/rooms.html
@@ -336,10 +336,10 @@
                             It's just under a 100 yards and takes less than 5 mins if your physically able bodied. If you are not please look at the pictures to determine if you will be comfortable with the distance. 
                         </p>
                         <p>Booking in the winter you will need a 4 wheel drive vehicle. Snow is likely December - March.</p>
-                        <div class="hide d-flex">
+                        <div class="hide">
                             <a class="link-collapse" data-toggle="collapse" href=".collapsed-content" 
-                            role="button" aria-expanded="false" aria-controls="collapsed-content">Hide</a>
-                            <svg class="mt-2 ml-2" viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 10px; width: 10px; display: block; fill: currentcolor; transform: rotate(0.5turn);"><path d="m16.29 4.3a1 1 0 1 1 1.41 1.42l-8 8a1 1 0 0 1 -1.41 0l-8-8a1 1 0 1 1 1.41-1.42l7.29 7.29z" fill-rule="evenodd" stroke="none" fill="#008489" stroke-width="1px"></path></svg>
+                            role="button" aria-expanded="false" aria-controls="collapsed-content">Hide
+                            <svg class="mt-n3 ml-5" viewBox="0 0 18 18" role="presentation" aria-hidden="true" focusable="false" style="height: 10px; width: 10px; display: block; fill: currentcolor; transform: rotate(0.5turn);"><path d="m16.29 4.3a1 1 0 1 1 1.41 1.42l-8 8a1 1 0 0 1 -1.41 0l-8-8a1 1 0 1 1 1.41-1.42l7.29 7.29z" fill-rule="evenodd" stroke="none" fill="#008489" stroke-width="1px"></path></svg></a>
                         </div>
                     </div>
                     <br>
@@ -773,6 +773,7 @@
                     <hr>
                 </section>
                 <!--End of Policies-->
+                    
             </article>
             <article class="container-card-dates mt-4">
                     <div class="card card-dates">
