Search and reserve cards' datepickers and submit objects are implemented

--- a/src/homes.html
+++ b/src/homes.html
@@ -81,7 +81,7 @@
                     <div class="navbar-content overlay container-section">
                         <a href="javascript:void(0)" class="closebtn" onclick="toggleNavbar()">
                             <img class="mt-3" src="./assets/img/homepage/svgs/airbnb-logo-red.svg" alt="airbnb-logo-red" width="40px">
-                            <!--Toggle Simgesi gelecek-->
+                            <img class="mt-3" src="./assets/img/homepage/svgs/down-arrow-gray.svg" alt="toggle" width="10px">
                         </a>
                         <!-- Overlay content -->
                         <div class="overlay-content">
@@ -180,12 +180,9 @@
    </header>
    <main>
         <article>   
-            <section class="container-section">
-            <p class="text-muted mt-3">Enter dates and number of guests to see the total price per night.</p>
-            <hr>
-            </section>
-        
-            <section class="section-travel container-section">
+          <section class="section-travel container-section">
+            <p class="text-muted my-4">Enter dates and number of guests to see the total price per night.</p>
+            <hr class="mb-5">
             <h2 class="title tundora mb-4">Travel the world with Airbnb</h2>
                 <div class="container-card-travel">
                     <a class="slick-prev slick-prev-card" href="#">
